PiZeroAbsorptionIntegrator mostly implemented but still not correct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,6 +251,7 @@ add_library(hermes SHARED
 	src/integrators/DispersionMeasureIntegrator.cpp
 	src/integrators/FreeFreeIntegrator.cpp
 	src/integrators/InverseComptonIntegrator.cpp
+	src/integrators/PiZeroAbsorptionIntegrator.cpp
 	src/integrators/PiZeroIntegrator.cpp
 	src/integrators/RotationMeasureIntegrator.cpp
 	src/integrators/SynchroAbsorptionIntegrator.cpp
@@ -270,7 +271,7 @@ add_library(hermes SHARED
 	src/magneticfields/Sun08Field.cpp
 	src/magneticfields/WMAP07Field.cpp
 	src/neutralgas/RingModel.cpp
-	src/outputs/HEALPix.cpp
+	src/outputs/HEALPixFormat.cpp
 	src/photonfields/ISRF.cpp
 	src/skymaps/GammaSkymapRange.cpp
 	src/skymaps/RadioSkymapRange.cpp
