Prepare docs for readthedocs.org

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -347,7 +347,7 @@ if(DOXYGEN_FOUND AND SPHINX_EXECUTABLE)
 	MESSAGE(STATUS "Found Doxygen and Sphinx to build documentation")
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/doc/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/doc/DoxygenLayout.xml ${CMAKE_CURRENT_BINARY_DIR}/DoxygenLayout.xml COPYONLY)
-    add_custom_target(doxy ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} COMMENT "Generating API documentation with Doxygen" VERBATIM
+    add_custom_target(doxy ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/doc COMMENT "Generating API documentation with Doxygen" VERBATIM
 )
 
 	include(FindPackageHandleStandardArgs)
@@ -357,8 +357,8 @@ if(DOXYGEN_FOUND AND SPHINX_EXECUTABLE)
 	set(SPHINX_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/doc)
 	set(SPHINX_BUILD ${CMAKE_CURRENT_BINARY_DIR}/doc)
 	add_custom_target(doc
-	                  ${SPHINX_EXECUTABLE} -b html
-										-Dbreathe_projects.hermes=${CMAKE_CURRENT_BINARY_DIR}/xml
+	                  ${SPHINX_EXECUTABLE} -b html -j auto
+										-Dbreathe_projects.hermes=${CMAKE_CURRENT_BINARY_DIR}/doc/xml
 	                  ${SPHINX_SOURCE} ${SPHINX_BUILD}
 	                  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 	                  COMMENT "Generating documentation with Sphinx")
