renamed directory for ionized ISM gas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -268,9 +268,9 @@ add_library(hermes SHARED
 	src/ProgressBar.cpp
 	src/Random.cpp
 	src/Signals.cpp
-	src/chargedgas/HII_Cordes91.cpp
-	src/chargedgas/NE2001Simple.cpp
-	src/chargedgas/YMW16.cpp
+	src/ionizedgas/HII_Cordes91.cpp
+	src/ionizedgas/NE2001Simple.cpp
+	src/ionizedgas/YMW16.cpp
 	src/cosmicrays/Dragon2D.cpp
 	src/cosmicrays/Dragon3D.cpp
 	src/cosmicrays/DummyCRDensity.cpp
