--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
             - g++-6
             - clang-8
             - libclang-common-8-dev
+            - lib32stdc++6
             - libgsl-dev
             - libfftw3-dev
             - libcfitsio3-dev
