changed the linux distro to bionic

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ cache:
 matrix:
     include:
         - os: linux
-          dist: xenial
+          dist: bionic
           compiler: gcc
           env:
               - COMPILER_NAME=gcc CXX=g++-9 CC=gcc-9
