--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
+    - name: Cache Gradle packages
+      uses: actions/cache@v2
+      with:
+        path: |
+          $HOME/hermes_cache
+    
     - name: Install dependencies on Ubuntu
       if: ${{ contains(env.OS, 'ubuntu') }}
       run: sudo apt-get install -y libgsl-dev libfftw3-dev libcfitsio-dev libmuparser-dev
@@ -48,20 +54,37 @@ jobs:
 
     - name: Configure CMake with Clang
       if: ${{ contains(env.COMPILER, 'clang') }}
-      env: 
+      env:
+        CXX: 'clang++'
+        CC: 'clang'
         CXX_COMPILER: 'clang++'
         C_COMPILER: 'clang'
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DENABLE_TESTING=On -DENABLE_PYTHON=True
+      run: |
+        DATAFILE=$HOME/hermes_cache/hermes-data.tar.gz
+        if [ -f $DATAFILE ]; then
+          echo "Using data file from cache!"
+          cp $DATAFILE .
+        fi;
+        cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DENABLE_TESTING=On -DENABLE_PYTHON=True
+        cp hermes-data.tar.gz $HOME/hermes_cache
 
     - name: Configure CMake with GCC
       if: ${{ contains(env.COMPILER, 'gcc') }}
-      env: 
+      env:
+        CXX: 'clang++'
+        CC: 'clang'
         CXX_COMPILER: 'g++'
         C_COMPILER: 'gcc'
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DENABLE_TESTING=On -DENABLE_PYTHON=True
-
+      run: |
+        DATAFILE=$HOME/hermes_cache/hermes-data.tar.gz
+        if [ -f $DATAFILE ]; then
+          echo "Using data file from cache!"
+          cp $DATAFILE .
+        fi;
+        cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DENABLE_TESTING=On -DENABLE_PYTHON=True
+        cp hermes-data.tar.gz $HOME/hermes_cache
+        
     - name: Build
-      # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
     - name: Test
