GitHub Actions return ctest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,5 +90,5 @@ jobs:
 
     - name: Test
       working-directory: ${{github.workspace}}/build
-      run: make test
+      run: ctest --output-on-failure -C ${{env.BUILD_TYPE}}
       
