Linking the HDF5 library when CMake finds it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,18 +133,20 @@ if(ENABLE_SYS_CFITSIO)
 endif(ENABLE_SYS_CFITSIO)
 
 # HDF5 for importing cosmic ray fluxes from Picard
-option(ENABLE_SYS_HDF5 "System HDF5 for hdf5 input" OFF)
+option(ENABLE_SYS_HDF5 "System HDF5 for hdf5 input" ON)
 if(ENABLE_SYS_HDF5)
-    find_package(HDF5 REQUIRED)
-    list(APPEND HERMES_EXTRA_INCLUDES ${HDF5_INCLUDE_DIR})
-    list(APPEND HERMES_EXTRA_LIBRARIES ${HDF5_LIBRARIES})
-    MESSAGE(STATUS "Parallel hdf5: ${HDF5_IS_PARALLEL} ")
-    if(${HDF5_IS_PARALLEL})
-        find_package(MPI)
-        list(APPEND HERMES_EXTRA_INCLUDES ${MPI_CXX_INCLUDE_PATH})
-        list(APPEND HERMES_EXTRA_LIBRARIES ${MPI_CXX_LIBRARIES})
-    endif(${HDF5_IS_PARALLEL})
-    add_definitions(-DHERMES_HAVE_HDF5)
+    find_package(HDF5)
+    if(${HDF5_FOUND})
+        list(APPEND HERMES_EXTRA_INCLUDES ${HDF5_INCLUDE_DIR})
+        list(APPEND HERMES_EXTRA_LIBRARIES ${HDF5_LIBRARIES})
+        MESSAGE(STATUS "Parallel hdf5: ${HDF5_IS_PARALLEL} ")
+        if(${HDF5_IS_PARALLEL})
+            find_package(MPI)
+            list(APPEND HERMES_EXTRA_INCLUDES ${MPI_CXX_INCLUDE_PATH})
+            list(APPEND HERMES_EXTRA_LIBRARIES ${MPI_CXX_LIBRARIES})
+        endif(${HDF5_IS_PARALLEL})
+        add_definitions(-DHERMES_HAVE_HDF5)
+    endif(${HDF5_FOUND})
 endif(ENABLE_SYS_HDF5)
 
 # kiss (provided)
