add fatal_error if cfitsio is not found

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,8 @@ if(ENABLE_SYS_CFITSIO)
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CFITSIO_C_FLAGS}")
         set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${CFITSIO_EXE_LINKER_FLAGS}")
         add_definitions(-DHERMES_HAVE_CFITSIO)
+    else()
+        message(FATAL_ERROR "CFITSIO is required.")
     endif(CFITSIO_FOUND)
 endif(ENABLE_SYS_CFITSIO)
 
@@ -343,7 +345,7 @@ target_link_libraries(hermes ${HERMES_EXTRA_LIBRARIES})
 # ----------------------------------------------------------------------------
 # Python
 # ----------------------------------------------------------------------------
-option(ENABLE_PYTHON "Create python library via Pybind11" ON)
+option(ENABLE_PYTHON "Create python library via Pybind11" OFF)
 find_package(PythonInterp)
 find_package(PythonLibs)
 
